--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,23 +9,20 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 
-# Runtime dependencies
 dependencies = [
-    "google-genai>=1.4.0",
+    "google-genai>=1.45.0",
     "python-dotenv>=1.0.0",
     "requests>=2.31.0",
-    "Pillow>=10.0.0",       
+    "Pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
-# only testing dependencies
 test = [
     "pytest>=7.4",
     "pytest-mock>=3.12",
-    "pytest-cov>=4.1"
+    "pytest-cov>=4.1",
 ]
 
-# development extras include testing + lint/format/docs
 dev = [
     "pytest>=7.4",
     "pytest-mock>=3.12",
@@ -35,6 +32,7 @@ dev = [
     "isort>=5.13",
     "mkdocs>=1.6",
     "mkdocs-material>=9.5",
+    "mkdocstrings[python]",
 ]
 
 [project.scripts]
@@ -53,7 +51,7 @@ profile = "black"
 
 [tool.pytest.ini_options]
 testpaths = ["src/multimodal_agent/tests"]
-addopts = "--cov=multimodal_agent --cov-report=term-missing"
+addopts = ""
 
 [build-system]
 requires = ["setuptools>=67.0", "wheel"]
