--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -3,6 +3,10 @@ name: Publish to TestPyPI
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write 
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,15 +22,16 @@ jobs:
 
       - name: Install build deps
         run: |
+          python -m pip install --upgrade pip
           pip install build twine
 
       - name: Build package
         run: python -m build
 
-      - name: Upload to TestPyPI
+      - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           repository-url: https://test.pypi.org/legacy/
           user: __token__
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           verbose: true
