--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read  # prevents OIDC/Trusted Publishing from being attempted
+      contents: read  
 
     steps:
       - name: Checkout code
@@ -20,6 +20,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+          
+      - name: Clean previous builds
+        run: rm -rf dist build *.egg-info
 
       - name: Install build deps
         run: |
