--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+   
+      - name: Clean previous builds
+        run: rm -rf dist build *.egg-info
 
       - name: Install build deps
         run: |
