--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,7 @@ addopts = ""
 requires = ["setuptools>=67.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = { find = { where = ["src"] } }
+
