--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  id-token: write 
+  id-token: write
   contents: read
 
 jobs:
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Pre-clean workspace
+        run: rm -rf dist build *.egg-info || true
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -19,14 +22,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-   
+
       - name: Clean previous builds
         run: rm -rf dist build *.egg-info
 
       - name: Install build deps
         run: |
           python -m pip install --upgrade pip
-          pip install build twine
+          pip install --upgrade build setuptools wheel twine
 
       - name: Build package
         run: python -m build
@@ -34,7 +37,4 @@ jobs:
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
-          repository-url: https://test.pypi.org/legacy/
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          verbose: true
+          repository-url: https://test.py
