--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -37,4 +37,7 @@ jobs:
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
-          repository-url: https://test.py
+          repository-url: "https://test.pypi.org/legacy/"
+          user: "__token__"
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          verbose: true
