--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -24,15 +24,28 @@ jobs:
           python-version: "3.11"
 
       - name: Clean previous builds
-        run: rm -rf dist build *.egg-info
+        working-directory: .
+        run: |
+          echo "Cleaning dist/build in $(pwd)"
+          ls -la
+          rm -rf ./dist ./build ./*.egg-info
+          ls -la
 
       - name: Install build deps
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade build setuptools wheel twine
-
+          
       - name: Build package
-        run: python -m build
+        run: |
+          echo "Building package..."
+          python -m build
+          echo "Build finished."
+
+      - name: Debug dist contents
+        run: |
+          echo "Checking dist contents:"
+          ls -R dist || echo "dist missing!"
 
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
