--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,5 +59,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
 packages = { find = { where = ["src"] } }
 
