--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,5 +61,5 @@ build-backend = "setuptools.build_meta"
 package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-packages = { find = { where = ["src"] } }
+where = ["src"]
 
