--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -7,16 +7,23 @@ permissions:
   id-token: write
   contents: read
 
+defaults:
+  run:
+    working-directory: multimodal-agent
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Pre-clean workspace
-        run: rm -rf dist build *.egg-info || true
-
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Print debug info
+        run: |
+          pwd
+          ls -la .
+          cat pyproject.toml || echo "NO PYPROJECT FOUND"
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -24,7 +31,6 @@ jobs:
           python-version: "3.11"
 
       - name: Clean previous builds
-        working-directory: .
         run: |
           echo "Cleaning dist/build in $(pwd)"
           ls -la
@@ -34,8 +40,8 @@ jobs:
       - name: Install build deps
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade build setuptools wheel twine
-          
+          pip install build twine
+
       - name: Build package
         run: |
           echo "Building package..."
@@ -50,7 +56,7 @@ jobs:
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
-          repository-url: "https://test.pypi.org/legacy/"
-          user: "__token__"
+          repository-url: https://test.pypi.org/legacy/
+          user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           verbose: true
