--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,10 @@ addopts = ""
 requires = ["setuptools>=67.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.metadata]
+name = "multimodal-agent"
+version = "0.2.5"
+
 [tool.setuptools]
 package-dir = {"" = "src"}
 
