--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -46,11 +46,12 @@ jobs:
           echo "Building package..."
           python -m build
           echo "Build finished."
-          
+
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           repository-url: https://test.pypi.org/legacy/
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          packages_dir: repo/dist
           verbose: true
