--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install build deps
         run: |
           python -m pip install --upgrade pip
-          pip install build twine
+          pip install "setuptools<74" "wheel<0.44" build twine
 
       - name: Build package
         run: |
