--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -7,29 +7,18 @@ permissions:
   id-token: write
   contents: read
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: repo
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          path: repo
 
-      - name: Print debug info
+      - name: Print project structure
         run: |
           echo "PWD: $(pwd)"
-          ls -la .
-          echo "==== src ===="
-          ls -la src || true
-          echo "==== top-level pyproject ===="
-          cat pyproject.toml || echo "NO pyproject.toml FOUND"
+          ls -R .
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -46,9 +35,12 @@ jobs:
           echo "Building package..."
           python -m build
           echo "Build finished."
+          ls -la dist
 
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           repository-url: https://test.pypi.org/legacy/
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           verify-metadata: false
