--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -15,27 +15,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Print project structure
+      - name: Print debug info
         run: |
           echo "PWD: $(pwd)"
-          ls -R .
+          ls -la .
+          echo "==== src ===="
+          ls -la src || true
+          echo "==== top-level pyproject ===="
+          cat pyproject.toml || echo "NO pyproject.toml FOUND"
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install build deps
+      - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "setuptools<74" "wheel<0.44" build twine
+          pip install --upgrade setuptools wheel build twine
 
       - name: Build package
         run: |
           echo "Building package..."
           python -m build
-          echo "Build finished."
+          echo "---- Built files ----"
           ls -la dist
+          echo "Build finished."
 
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@v1.8.11
@@ -43,4 +48,3 @@ jobs:
           repository-url: https://test.pypi.org/legacy/
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          verify-metadata: false
