--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -2,27 +2,21 @@ name: Publish to TestPyPI
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - "v*"
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build:
+  build-publish:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Print debug info
-        run: |
-          echo "PWD: $(pwd)"
-          ls -la .
-          echo "==== src ===="
-          ls -la src || true
-          echo "==== top-level pyproject ===="
-          cat pyproject.toml || echo "NO pyproject.toml FOUND"
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -32,19 +26,13 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade setuptools wheel build twine
+          pip install build
 
       - name: Build package
-        run: |
-          echo "Building package..."
-          python -m build
-          echo "---- Built files ----"
-          ls -la dist
-          echo "Build finished."
+        run: python -m build
 
-      - name: Publish to TestPyPI
+      - name: Publish to TestPyPI using Trusted Publishing
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           repository-url: https://test.pypi.org/legacy/
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          skip-existing: false
