--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -2,21 +2,25 @@ name: Publish to TestPyPI
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - "v*"
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build-publish:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Debug
+        run: |
+          pwd
+          ls -la
+          echo "--- pyproject.toml ---"
+          cat pyproject.toml
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -26,7 +30,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
+          pip install "setuptools<74" "wheel<0.44" build
 
       - name: Build package
         run: python -m build
@@ -35,4 +39,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           repository-url: https://test.pypi.org/legacy/
-          skip-existing: false
+          verify-metadata: false
