--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,18 +39,21 @@ dev = [
 agent = "multimodal_agent.cli:main"
 
 [tool.black]
-line-length = 100
+line-length = 88
 target-version = ['py311']
 
 [tool.flake8]
-max-line-length = 100
+max-line-length = 88
 exclude = ["build", "dist", ".venv"]
+
+[tool.ruff]
+line-length = 88
 
 [tool.isort]
 profile = "black"
 
 [tool.pytest.ini_options]
-testpaths = ["src/multimodal_agent/tests"]
+testpaths = ["src"]
 addopts = ""
 
 [build-system]
@@ -62,4 +65,3 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
